--- a/PIACore/PIACore.csproj
+++ b/PIACore/PIACore.csproj
@@ -3,10 +3,16 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <Configurations>Debug;Release;Run</Configurations>
+        <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
       <Folder Include="Exceptions" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="dotenv.net" Version="1.0.3" />
     </ItemGroup>
 
 </Project>
