--- a/PIACore/PIACore.csproj
+++ b/PIACore/PIACore.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="dotenv.net" Version="1.0.3" />
+      <PackageReference Include="JSON" Version="1.0.1" />
     </ItemGroup>
 
 </Project>
