--- a/PIACore/.env
+++ b/PIACore/.env
@@ -1,3 +1,3 @@
-TEST=local
-REMOTE_API_URL=https://po64.sirene.ovh/api
+REMOTE_API_URL=https://po64.sirene.ovh/api/2
 REMOTE_API_KEY=ad05b41e-85e3-45c6-b2d2-bd80c4adf6a0
+AI_TABLE_IDENTIFIER=[EL_PSY_CONGROO]
