--- a/PIACore/PIACore.csproj
+++ b/PIACore/PIACore.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="dotenv.net" Version="1.0.3" />
       <PackageReference Include="JSON" Version="1.0.1" />
+      <PackageReference Include="Microsoft.AspNet.WebApi" Version="5.2.6" />
     </ItemGroup>
 
 </Project>
