Poker AI now works on multiple client using a JSON configuration. Added Markdown readme explaining how to install.

--- a/PIACore/.env
+++ b/PIACore/.env
@@ -1,4 +1,2 @@
-REMOTE_API_URL=https://po65.sirene.ovh/api/2
-REMOTE_API_KEY=ad05b41e-85e3-45c6-b2d2-bd80c4adf6a0
-AI_TABLE_IDENTIFIER=[EL_PSY_CONGROO]
-AI_REFRESH_RATE_IN_MILIS=2000
+REMOTE_API_URL=https://po64.eu-de.mybluemix.net/api/2
+REMOTE_API_URL=https://qwertyuiop.sirene.ovh/api/2
