--- a/PIACore/PIACore.csproj
+++ b/PIACore/PIACore.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -9,8 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="dotenv.net" Version="1.0.3" />
+      <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
       <PackageReference Include="JSON" Version="1.0.1" />
       <PackageReference Include="Microsoft.AspNet.WebApi" Version="5.2.6" />
     </ItemGroup>
-
 </Project>
