--- a/PIACore/PIACore.csproj
+++ b/PIACore/PIACore.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
-        <Configurations>Debug;Release;Run</Configurations>
+        <Configurations>Debug;Release;Run-Linux</Configurations>
         <Platforms>AnyCPU</Platforms>
-        <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
     </PropertyGroup>
 
     <ItemGroup>
